[project]
name = "fast_td3"
version = "0.1.0"
description = "FastTD3 implementation"
readme = "README.md"
requires-python = "==3.10.*"
dependencies = [
    "gymnasium<1.0.0",
    "isaaclab[all,isaacsim]==2.1.0",
    "jax-jumpy==1.0.0",
    "loguru>=0.7.3",
    "matplotlib>=3.10.3",
    "moviepy>=2.2.1",
    "numpy<2.0",
    "pandas>=2.3.1",
    "protobuf>=3.20.3",
    "pygame>=2.1.0",
    "stable-baselines3>=2.6.0",
    "tensordict>=0.9.1",
    "torchrl>=0.9.1",
    "tqdm>=4.67.1",
    "tyro>=0.9.26",
    "wandb>=0.12.21",
] 

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["fast_td3"]

[[tool.uv.index]]
url = "https://pypi.nvidia.com/"

[dependency-groups]
dev = [
    "debugpy>=1.8.15",
]
